--- a/Frontend/src/components/about.css
+++ b/Frontend/src/components/about.css
@@ -1,5 +1,26 @@
-.aboutcontent {
+/* .aboutcontent {
     margin-left: 6.4%;
     margin-right: 6.4%;
     padding-top: 5%;
+} */
+
+.aboutcontent {
+    padding-left: 6.4%;
+    padding-right: 10%;
+    padding-top: 5%;
+    margin: 0%;
+}
+
+.about {
+    justify-content: center;
+}
+
+@media(max-width: 770px) {
+    p {
+        font-size: 13px;
+    }
+
+    h5 {
+        font-size: 18px;
+    }
 }
