--- a/Frontend/src/components/caurosel.css
+++ b/Frontend/src/components/caurosel.css
@@ -2,6 +2,8 @@
 .carousel {
     height: 400px;
     /* Set the desired height for the carousel */
+    background-color: #fff;
+    margin-top: 3%;
 }
 
 
@@ -10,6 +12,7 @@
 .slide {
     width: 100%;
     height: 500px;
+    background-color: #fff;
     /* Match the height with the carousel */
 }
 
