--- a/Frontend/src/components/email.css
+++ b/Frontend/src/components/email.css
@@ -1,22 +1,3 @@
-/*.emails{
-    height: 100px;
-    background-color: gray;
-    display:flex;
-}
-
-.lorem1{
-    width: 50%;
-    display: flex;
-    margin-left:50px ;
-}
-
-.form{
-    margin: 30px;
-    margin-left: 200px;
-}*/
-
-
-/* xyz.css (or include it in your main CSS file) */
 .emails {
     display: flex;
     justify-content: center;
@@ -33,6 +14,7 @@
 
 .form {
     text-align: center;
+    display: flex;
 }
 
 input[type="text"] {
@@ -49,6 +31,12 @@ button.normal {
     border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
+}
+
+@media(max-width: 770px) {
+    p {
+        font-size: 13px;
+    }
 }
 
 /* Customize further as needed */
