--- a/Frontend/src/components/navbar.css
+++ b/Frontend/src/components/navbar.css
@@ -1,70 +1,102 @@
 /* Navbarv.css (or include it in your main CSS file) */
 .navbar {
-    background-color: #ffffff;
-    /* Background color for the navbar */
+  background-color: #ffffff;
+  /* Background color for the navbar */
 }
 
 .nav-link {
-    color: #333;
-    /* Link text color */
+  color: #333;
+  /* Link text color */
 }
 
-/* Customize further as needed */
-
-.sign-in{
-    margin-left: 750px;
-    border-radius: 10%;
-    width: 75px;
+.sign-in {
+  margin-left: 750px;
+  border-radius: 10%;
+  width: 75px;
 }
+
+.logo {
+  height: 85px;
+  width: 85px;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+}
+
 .register {
-    margin-left: 10px;
-    border-radius: 10%;
-    width: 75px;
+  margin-left: 10px;
+  border-radius: 10%;
+  width: 75px;
 }
 
 /* Dropdown Button */
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #0e0e0e;}
+/* .dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
 
- .abc{
-    margin-left: 800px;
-    margin-right: 1%;
- }
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #0e0e0e;
+}
+
+.abc {
+  margin-left: 800px;
+  margin-right: 1%;
+}
+
+
+.shift{
+  display: inline;
+  color: white;
+}
+.shift:hover {
+  color: #ccc; /* Set the hover color as needed */
+}
+
+@media(max-width: 470px) {
+  .cont {
+    display: inline flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
