--- a/Frontend/src/components/public.css
+++ b/Frontend/src/components/public.css
@@ -1,5 +1,20 @@
 .publiccontent {
-    margin-left: 6.4%;
-    margin-right: 6.4%;
+    padding-left: 6.4%;
+    padding-right: 6.4%;
     padding-top: 5%;
+    justify-content: center;
+}
+
+h6 {
+    margin-top: 5%;
+}
+
+@media(max-width: 770px) {
+    p {
+        font-size: 13px;
+    }
+
+    h5 {
+        font-size: 18px;
+    }
 }
