--- a/Frontend/src/pages/auth/loginpolice.css
+++ b/Frontend/src/pages/auth/loginpolice.css
@@ -2,17 +2,25 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    ;
 }
-body{
-    background: seagreen;
+
+.bg-light {
+    background-color: #5da0b1;
 }
-.wrapper{
+
+.wrapperCont {
+    background-color: #EEF5FF;
+}
+
+.wrapper {
     text-align: center;
     display: flex;
     justify-content: center;
     min-height: 50vh;
     width: 420px;
-    background:rgb(212, 245, 228);
+    background: #5da0b1;
+    border-radius: 10px;
     color: black;
     margin-left: auto;
     margin-right: auto;
@@ -22,35 +30,38 @@ body{
 
 }
 
-.wrapper h1{
+.wrapper h1 {
     margin-top: 0%;
     font-size: 36px;
 
 }
-.wrapper .input-box{
+
+.wrapper .input-box {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
-    
+
 }
-.input-box input{
+
+.input-box input {
     width: 100%;
     height: 100%;
-    background: transparent ;
+    background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgb(255,255,255,2);
-    border-radius:40px ;
+    border: 2px solid rgb(255, 255, 255, 2);
+    border-radius: 40px;
     color: black;
     padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder{
-    color: seagreen;
+.input-box input::placeholder {
+    color: rgb(245, 248, 246);
 
 }
-.input-box .icon{
+
+.input-box .icon {
     position: absolute;
     right: 20px;
     top: 30%;
@@ -58,49 +69,59 @@ body{
     font: size 16px;
 
 }
-.wrapper .remember-forgot{
+
+.wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
     font-size: 14.5px;
     margin: -15px 0 15px;
 
 }
-.remember-forgot label input{
-    accent-color: rgb(212, 245, 228);
+
+body {
+    background-color: #EEF5FF;
+}
+
+.remember-forgot label input {
+    accent-color: #5da0b1;
     margin-right: 4px;
 }
 
-.remember-forgot a{
+.remember-forgot a {
     text-decoration: underline;
 }
-.remember-forgot a:hover{
+
+.remember-forgot a:hover {
     text-decoration: underline;
 }
-.wrapper button{
+
+.wrapper button {
     width: 100%;
     height: 45px;
-    background:rgb(212, 245, 228);
+    background: #365486;
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px black;
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: #e2dcdc;
     font-weight: 700;
 
 }
 
-.wrapper .register-link{
+.wrapper .register-link {
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
-.register-link p a{
+
+.register-link p a {
     text-decoration: none;
     font-weight: 600;
 
 }
-.register-link p a:hover{
+
+.register-link p a:hover {
     text-decoration: underline;
 }
