--- a/Frontend/src/pages/auth/signuppublic.css
+++ b/Frontend/src/pages/auth/signuppublic.css
@@ -3,16 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background: seagreen;
+
+body {
+    background-color: #EEF5FF;
 }
-.wrapper{
+
+.wrapper {
     text-align: center;
     display: flex;
     justify-content: center;
     min-height: 50vh;
     width: 420px;
-    background:rgb(212, 245, 228);
+    /* background:rgb(212, 245, 228); */
     color: black;
     margin-left: auto;
     margin-right: auto;
@@ -22,39 +24,41 @@ body{
 
 }
 
-.wrapper h1{
+.wrapper h1 {
     margin-top: 0%;
     font-size: 36px;
 
 }
-.wrapper .input-box{
+
+.wrapper .input-box {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
-    
+
 }
-.input-box input{
+
+.input-box input {
     width: 100%;
     height: 100%;
-    background: transparent ;
+    background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgb(255,255,255,2);
-    border-radius:40px ;
+    border: 2px solid rgb(255, 255, 255, 2);
+    border-radius: 40px;
     color: black;
     padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder{
+/* .input-box input::placeholder {
     color: seagreen;
 
-}
+} */
 
-.wrapper button{
+.wrapper button {
     width: 100%;
     height: 45px;
-    background:rgb(212, 245, 228);
+    /* background: rgb(212, 245, 228); */
     border: none;
     outline: none;
     border-radius: 40px;
